--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -348,14 +348,15 @@ font-family: 'Muli', sans-serif;
              <h5 class="foothead">Contact Us</h5>
              <p style="color: white; font-size: 14px;">
               <span><i class="fa fa-envelope" aria-hidden="true"></i> Mailing Address</span><br>
-              <span style="font-weight: 300; font-size: 12px;">P.O.Box SR 1223,</span><br>
+              <span style="font-weight: 300; font-size: 12px;">2811 village blvd , /11613 Greensleeve Ave, Tampa
+west palm beach, FL 33409</span><br>
               <span style="font-weight: 300; font-size: 12px;">XXX XXX XXX</span>
              </p>
              
              <p style="color: white; font-size: 14px;">
-              <span><i class="fa fa-phone" aria-hidden="true"></i> Mobile: +1 (561)440-3350</span><br>
-              <span><i class="fa fa-phone" aria-hidden="true"></i> Office: +1 (561)440-3350</span><br>
-              <span><i class="fa fa-envelope" aria-hidden="true"></i> Email: info@jimfam.com</span><br>
+              <span><i class="fa fa-phone" aria-hidden="true"></i> Mobile: +1 (561) 692-6716</span><br>
+              <span><i class="fa fa-phone" aria-hidden="true"></i> Office: +1 (561) 692-6716</span><br>
+              <span><i class="fa fa-envelope" aria-hidden="true"></i> Email: info@jimfam.net</span><br>
              </p>
              <span><a href="http://www.facebook.com/theglleaders" target="_blank"><i class="fa fa-facebook-official" style="color: white; margin-right: 5px;" aria-hidden="true"></i></a></span>
              <span><a href="http://www.twitter.com/theglleaders" target="_blank"><i class="fa fa-twitter-square" style="color: white; margin-right: 5px;" aria-hidden="true"></i></a></span>
@@ -397,7 +398,7 @@ font-family: 'Muli', sans-serif;
       </div>
       <div class="row" style="margin-top: 30px;">
         <div class="col-lg-12">
-        <p class="m-0 text-white" style="text-align: center; font-size: 14px;">Copyright &copy; JIMFAM(JCCBI), 2020</p>
+        <p class="m-0 text-white" style="text-align: center; font-size: 14px;">Copyright &copy; JIMFAM(JCCBI), 2021</p>
       </div>
       <div class="col-lg-4">
        <!--  <p class="m-0 text-white" style="text-align: right; font-size: 11px;">
