--- a/app/views/static_pages/aboutus.html.erb
+++ b/app/views/static_pages/aboutus.html.erb
@@ -21,9 +21,11 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h1 class="homeheadbigtext">
-					JIMFAM is a leading agro-industrial actor. Our know-how builds on over years' experience in providing our customers with high quality commodities and services 
+					JimFam is a leading Afro-industrial firm working hand in hand with the cocoa merchants association of America.
 				</h1>
 				<p style="font-size: 14px; color: #4a4a4a; font-weight: 300; line-height: 28px; margin-top: 20px;">
+					JimFam is a leading Afro-industrial firm working hand in hand with the cocoa merchants association of America importing quality raw cocoa and coffee beans at it natural state to Manufactuirng companies(chocolate companies,coffee companies etc) 
+					<br><br>
 					In addition to delivering responsibly-sourced cocoa and coffee, we are now increasing our 
 					engagement in commodity-producing countries through processing operations in cocoa.
 					<br><br> 
