--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -137,18 +137,16 @@ top: 15px;
         	 <!-- Slide Two - Set the background image for this slide in the line below -->
            <div class="carousel-item active" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60d545ebed0ba.jpeg'); background-position:center;">
             <div class="carousel-caption d-md-block">
-              	<h1 class="acttextbig">
-					Welcome to JBCCI
-				</h1>
+              	
 				<h1 class="acttextbig" style="color: #ffb70a;">
-					Top Coffee Bean Importer
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
 				</h1>
 				<p style="text-align: left;">
-					JimFam is the best company to contact for all your cocoa and coffee beans.
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
 				</p>
 				<p style="text-align: left;">
-					<a href="/apply" class="btn btn-lg rmore btn-primary">Read More</a>
-					<a href="/apply" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
 				</p>
             </div>
           </div>
@@ -156,18 +154,15 @@ top: 15px;
           <!-- Slide Two - Set the background image for this slide in the line below -->
            <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60d5463f1eacc.jpeg'); background-position:center;">
             <div class="carousel-caption d-md-block">
-              	<h1 class="acttextbig">
-					Welcome to JBCCI
-				</h1>
-				<h1 class="acttextbig" style="color: #ffb70a;">
-					Quality Coffee Beans Exported worldwide.
+              	<h1 class="acttextbig" style="color: #ffb70a;">
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
 				</h1>
 				<p style="text-align: left;">
-					JimFam is the best company to contact for all your cocoa and coffee beans.
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
 				</p>
 				<p style="text-align: left;">
-					<a href="/apply" class="btn btn-lg rmore btn-primary">Read More</a>
-					<a href="/apply" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
 				</p>
             </div>
           </div>
@@ -175,18 +170,15 @@ top: 15px;
           <!-- Slide Three - Set the background image for this slide in the line below -->
            <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60d5467767906.jpeg'); background-position:center;)">
             <div class="carousel-caption d-md-block">
-              <h1 class="acttextbig">
-					Welcome to JBCCI
-				</h1>
-				<h1 class="acttextbig" style="color: #ffb70a;">
-					Top Cocoa Bean Importer
+              <h1 class="acttextbig" style="color: #ffb70a;">
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
 				</h1>
 				<p style="text-align: left;">
-					JimFam is the best company to contact for all your cocoa and coffee beans.
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
 				</p>
 				<p style="text-align: left;">
-					<a href="/apply" class="btn btn-lg rmore btn-primary">Read More</a>
-					<a href="/apply" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
 				</p>
             </div>
           </div>
@@ -194,18 +186,15 @@ top: 15px;
           <!-- Slide Three - Set the background image for this slide in the line below -->
            <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60d546d545dc7.jpeg'); background-position:center;">
             <div class="carousel-caption d-md-block">
-              <h1 class="acttextbig">
-					Welcome to JBCCI
-				</h1>
-				<h1 class="acttextbig" style="color: #ffb70a;">
-					Quality Cocoa Beans Exported worldwide.
+              <h1 class="acttextbig" style="color: #ffb70a;">
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
 				</h1>
 				<p style="text-align: left;">
-					JimFam is the best company to contact for all your cocoa and coffee beans.
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
 				</p>
 				<p style="text-align: left;">
-					<a href="/apply" class="btn btn-lg rmore btn-primary">Read More</a>
-					<a href="/apply" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
 				</p>
             </div>
           </div>
@@ -228,9 +217,11 @@ top: 15px;
 		<div class="row">
 			<div class="col-lg-6">
 				<h1 class="homeheadbigtext">
-					JIMFAM is a leading agro-industrial actor. Our know-how builds on over years' experience in providing our customers with high quality commodities and services 
+					JimFam is a leading Afro-industrial firm working hand in hand with the cocoa merchants association of America.
 				</h1>
 				<p style="font-size: 14px; color: #4a4a4a; font-weight: 300; line-height: 28px; margin-top: 20px;">
+					JimFam is a leading Afro-industrial firm working hand in hand with the cocoa merchants association of America importing quality raw cocoa and coffee beans at it natural state to Manufactuirng companies(chocolate companies,coffee companies etc) 
+					<br><br>
 					In addition to delivering responsibly-sourced cocoa and coffee, we are now increasing our 
 					engagement in commodity-producing countries through processing operations in cocoa.
 					<br><br> 
