--- a/app/views/static_pages/contactus.html.erb
+++ b/app/views/static_pages/contactus.html.erb
@@ -46,9 +46,9 @@
 				<h3 style="font-family: 'Montserrat', sans-serif; font-weight: 500; font-size: 22px; color: #6a2f1e;">Contact Information</h3>
 				<p style="text-align: left; font-size: 14px;">Reach JimFam through these dedicated contact avenues.</p>
 				<p style="text-align: left; font-size: 14px;">
-                <span><i class="fa fa-phone" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> +1 (561)440-3350 </span><br>
-                <span><i class="fa fa-envelope" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> info@jimfam.com</span><br>
-                <span><i class="fa fa-map-marker" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;">  XXX, XXX, XXX </span><br>
+                <span><i class="fa fa-phone" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> +1 (561) 692-6716 </span><br>
+                <span><i class="fa fa-envelope" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> info@jimfam.net</span><br>
+                <span><i class="fa fa-map-marker" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;">  2811 village blvd , /11613 Greensleeve Ave, Tampa west palm beach, FL 33409 </span><br>
 				</p>
 				<p>
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3114013.163933673!2d-84.91302020944605!3d40.34171420956746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8836e97ab54d8ec1%3A0xe5cd64399c9fd916!2sOhio%2C%20USA!5e0!3m2!1sen!2sgh!4v1586553287859!5m2!1sen!2sgh" width="400" height="280" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
