--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -348,9 +348,8 @@ font-family: 'Muli', sans-serif;
              <h5 class="foothead">Contact Us</h5>
              <p style="color: white; font-size: 14px;">
               <span><i class="fa fa-envelope" aria-hidden="true"></i> Mailing Address</span><br>
-              <span style="font-weight: 300; font-size: 12px;">2811 village blvd , /11613 Greensleeve Ave, Tampa
-west palm beach, FL 33409</span><br>
-              <span style="font-weight: 300; font-size: 12px;">XXX XXX XXX</span>
+              <span style="font-weight: 300; font-size: 12px;">2811 village blvd , /11613 Greensleeve Ave, <br> Tampa
+west palm beach, FL 33409</span>
              </p>
              
              <p style="color: white; font-size: 14px;">
