--- a/app/views/static_pages/contactus.html.erb
+++ b/app/views/static_pages/contactus.html.erb
@@ -47,7 +47,7 @@
 				<p style="text-align: left; font-size: 14px;">Reach JimFam through these dedicated contact avenues.</p>
 				<p style="text-align: left; font-size: 14px;">
                 <span><i class="fa fa-phone" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> +1 (561) 692-6716 </span><br>
-                <span><i class="fa fa-envelope" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> info@jimfam.net</span><br>
+                <span><i class="fa fa-envelope" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;"> info@jimfam.net, JCCBI_Merchants@contractor.net</span><br>
                 <span><i class="fa fa-map-marker" aria-hidden="true" style="color: #f29c09;"></i></span><span style="font-weight: 400;">  2811 village blvd , /11613 Greensleeve Ave, Tampa west palm beach, FL 33409 </span><br>
 				</p>
 				<p>
