--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -355,7 +355,7 @@ west palm beach, FL 33409</span>
              <p style="color: white; font-size: 14px;">
               <span><i class="fa fa-phone" aria-hidden="true"></i> Mobile: +1 (561) 692-6716</span><br>
               <span><i class="fa fa-phone" aria-hidden="true"></i> Office: +1 (561) 692-6716</span><br>
-              <span><i class="fa fa-envelope" aria-hidden="true"></i> Email: info@jimfam.net</span><br>
+              <span><i class="fa fa-envelope" aria-hidden="true"></i> Email: info@jimfam.net, JCCBI_Merchants@contractor.net</span><br>
              </p>
              <span><a href="http://www.facebook.com/theglleaders" target="_blank"><i class="fa fa-facebook-official" style="color: white; margin-right: 5px;" aria-hidden="true"></i></a></span>
              <span><a href="http://www.twitter.com/theglleaders" target="_blank"><i class="fa fa-twitter-square" style="color: white; margin-right: 5px;" aria-hidden="true"></i></a></span>
