--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -167,6 +167,38 @@ top: 15px;
             </div>
           </div>
 
+          <!-- Slide Two - Set the background image for this slide in the line below -->
+           <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/slderadd.jpg'); background-position:center;">
+            <div class="carousel-caption d-md-block">
+              	<h1 class="acttextbig" style="color: #ffb70a;">
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
+				</h1>
+				<p style="text-align: left;">
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
+				</p>
+				<p style="text-align: left;">
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+				</p>
+            </div>
+          </div>
+
+          <!-- Slide Two - Set the background image for this slide in the line below -->
+           <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/slderadd2.jpg'); background-position:center;">
+            <div class="carousel-caption d-md-block">
+              	<h1 class="acttextbig" style="color: #ffb70a;">
+					Welcome to Jimfam Cocoa & Coffee <br> Beans Importers  Inc (JCCBI).
+				</h1>
+				<p style="text-align: left;">
+					We are your number one importer of quality raw Cocoa and Coffee beans at it Raw state from any part <br> of the world to your door steps(manufacturing companies).
+				</p>
+				<p style="text-align: left;">
+					<a href="/aboutus" class="btn btn-lg rmore btn-primary">Read More</a>
+					<a href="/contactus" style="margin-left: 10px;" class="btn btn-lg ctact btn-primary">Contact Us</a>
+				</p>
+            </div>
+          </div>
+
           <!-- Slide Three - Set the background image for this slide in the line below -->
            <div class="carousel-item" style="background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60d5467767906.jpeg'); background-position:center;)">
             <div class="carousel-caption d-md-block">
@@ -230,7 +262,7 @@ top: 15px;
 			</div>
 			<div class="col-lg-6">
 				<p>
-					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/6100fd3d1fcb1.jpeg" class="img-fluid">
+					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/bgcheck.jpg" class="img-fluid">
 				</p>
 			</div>
 		</div>
@@ -277,7 +309,7 @@ top: 15px;
 
 			<div class="col-lg-4">
 				<div class="holdserv">
-					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60e7d362c2931.jpeg" class="img-fluid">
+					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/sampler.jpg"  height="500px" class="img-fluid">
 					<h5 style="margin-top: 20px; text-align: center; color: #6a2f1e;">
 						Proper Background Checks
 					</h5>
