--- a/app/views/static_pages/aboutus.html.erb
+++ b/app/views/static_pages/aboutus.html.erb
@@ -34,7 +34,7 @@
 			</div>
 			<div class="col-lg-6">
 				<p>
-					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/6100fd3d1fcb1.jpeg" class="img-fluid">
+					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/bgcheck.jpg" class="img-fluid">
 				</p>
 			</div>
 		</div>
