--- a/app/views/static_pages/ourservices.html.erb
+++ b/app/views/static_pages/ourservices.html.erb
@@ -62,7 +62,7 @@
 
 			<div class="col-lg-4">
 				<div class="holdserv">
-					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/60e7d362c2931.jpeg" class="img-fluid">
+					<img src="https://nikasemo-static.s3.us-west-2.amazonaws.com/jimfam/sampler.jpg" class="img-fluid">
 					<h4 style="margin-top: 20px; text-align: center; color: #6a2f1e;">
 						Proper Background Checks
 					</h4>
